--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,19 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="ui menu">
+    <div class="ui container">
+      <div class="header item borderless">
+        <h1 class="ui header">
+          Angular Inventory App
+        </h1>
+      </div>
+    </div>
+  </div>
+
+  <div class="ui main text container">
+    <inventory-app-root>Loading...</inventory-app-root>
+    <!-- <--- Our app loads here! -->
+  </div>
 </body>
 </html>
